2007-05-31  Inge Wallin  <inge@lysator.liu.se>

	Remove worthless APIDOX
	src/httpfetchfile.h		src/katlaswindrose.h
	src/placemarkinfodialog.h	src/katlascontrol.h
	src/placemarkmodel.h		src/katlasviewpopupmenu.h
	src/katlasmapscale.h		src/katlasviewinputhandler.h
	src/measuretool.h		src/vectormap.h
	src/placemarkpainter.h		src/TileLoader.h
	src/tinywebbrowser.h		src/texcolorizer.h
	src/katlasaboutdialog.h		src/placemarkmanager.h
	src/HttpDownloadManager.h	src/marblecontrol.h
	src/TextureMapper.h		src/katlasflag.h
	src/vectorcomposer.h		src/GridMap.h
	src/katlastilecreatordialog.h	src/katlasthemeselectview.h
	src/katlascrosshair.h		src/tilescissor.h
	src/FastMath.h			src/clippainter.h
	src/TextureTile.h:
	Remove apidox only consisting of @author so that the resulting
	output only contains actual information.
	
	Add APIDOX
	* src/MarbleWidget.h (class MarbleWidget): Add class docs and some
	method docs.
	* src/MarbleControlBox.h (class MarbleControlBox): Add class docs
	and some method docs.
	* src/katlasglobe.h (class KAtlasGlobe): Add class docs.

	Rename KAtlasToolBox into MarbleControlBox
	* src/katlastoolbox.ui  -> src/MarbleControlBox.ui
	* src/katlastoolbox.h   -> src/MarbleControlBox.h
	* src/katlastoolbox.cpp -> src/MarbleControlBox.cpp
	* src/CmakeLists.txt: use new name
	* src/marbleosx.pro:  use new name
	* src/katlascontrol.cpp: Use new class name
	* src/DESIGN: Update documentation

2007-05-29  Torsten Rahn  <rahn@kde.org>

Some fixes:

    * Changed zPointLimit to avoid "Green Pacific" bug
    * Changed xmlhandler to change placemark symbols according to legend
    * Added resulting cityplacemarks.cache file

2007-05-28  Inge Wallin  <inge@lysator.liu.se>

	Fix Krazy issue: Check for Qt classes that should not be used
	* src/QtMainWindow.cpp (exportMapScreenShot): Suppress false
	positives for krazy tests
	* src/KdeMainWindow.cpp (exportMapScreenShot): Use KMessageBox
	instead of QMessageBox.

	Fix Krazy issue: missing tags: copyright