@@ -1,3 +1,13 @@
+2007-06-02  Inge Wallin  <inge@lysator.liu.se>
+
+	Show zoom level in the status bar
+	* src/KdeMainWindow.cpp (showZoom): new slot
+	(createStatusBar): create zoom label
+	(MainWindow): Show initial zoom level
+	* src/katlascontrol.h (marbleWidget): New method
+	* src/lib/MarbleWidget.h (zoom): New method.
+	
+
 2007-05-31  Inge Wallin  <inge@lysator.liu.se>
 
 	Remove worthless APIDOX
